enable ignoring chk_fm

--- a/core.ipynb
+++ b/core.ipynb
@@ -268,16 +268,35 @@
     "#export\n",
     "def _min_len_err(d, key, n):\n",
     "    if _intersect(d, key): return False\n",
-    "    else: return key in d and len(d[key]) < n # return true if it is less than n length\n",
+    "    # Return true if it is less than n length. Ignore with front matter `mdseo-ignore: [chk_fm slug]`.\n",
+    "    else: return key in d and not f\"chk_fm {key}\" in d[\"mdseo-ignore\"] and len(d[key]) < n \n",
     "\n",
     "def _max_len_err(d, key, n):\n",
     "    if _intersect(d, key): return False\n",
-    "    else: return key in d and len(d[key]) > n #return true if greater than n length\n",
+    "    # Return true if greater than n length. Ignore with front matter `mdseo-ignore: [chk_fm slug]`.\n",
+    "    else: return key in d and not f\"chk_fm {key}\" in d[\"mdseo-ignore\"] and len(d[key]) > n \n",
     "\n",
     "def _checker(func, msg:str, srcdir:str):\n",
     "    fnames = meta_list(srcdir).filter(func).attrgot('fname')\n",
     "    files = '\\n\\t'.join(fnames)\n",
     "    if fnames: raise Exception(f\"The following files {msg}:\\n\\t{files}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7be8b234",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key = \"slug\"\n",
+    "maxlen = 60\n",
+    "srcdir = \"/Users/eddie/Dev/outerbounds-docs/docs\"\n",
+    "\n",
+    "_checker(\n",
+    "    partial(_max_len_err, key=key, n=maxlen), \n",
+    "    f\"have the field `{key}` in their front matter that is greater than {maxlen} characters\", srcdir\n",
+    ")"
    ]
   },
   {
@@ -297,7 +316,22 @@
     "\n",
     "\n",
     "assert not _min_len_err(_test_fm, 'slug', 5)\n",
-    "assert not _max_len_err(_test_fm, 'slug', 39)"
+    "assert not _max_len_err(_test_fm, 'slug', 39)\n",
+    "\n",
+    "_test_ignore_short_slug_fm = get_meta('test_files/front_matter_ignore_short_slug.md')\n",
+    "_test_ignore_long_slug_fm = get_meta('test_files/front_matter_ignore_long_slug.md')\n",
+    "\n",
+    "n = 10\n",
+    "assert len(_test_ignore_short_slug_fm['slug']) < n\n",
+    "assert not _min_len_err(_test_ignore_short_slug_fm, 'slug', n)\n",
+    "_test_ignore_short_slug_fm['mdseo-ignore'] = []\n",
+    "assert _min_len_err(_test_ignore_short_slug_fm, 'slug', n)\n",
+    "\n",
+    "n = 60\n",
+    "assert len(_test_ignore_long_slug_fm['slug']) > n\n",
+    "assert not _max_len_err(_test_ignore_long_slug_fm, 'slug', n)\n",
+    "_test_ignore_long_slug_fm['mdseo-ignore'] = []\n",
+    "assert _max_len_err(_test_ignore_long_slug_fm, 'slug', n)"
    ]
   },
   {
@@ -335,7 +369,11 @@
     "           minlen:int=None, #the minimum character length allowed for the field\n",
     "           maxlen:int=None  #the maximum character length allowed for the field\n",
     "          ):\n",
-    "    \"Check front matter for various rules.\"\n",
+    "    '''\n",
+    "    Check front matter for various rules.\n",
+    "    Ignore with front matter `mdseo-ignore: [chk_fm <key>]` - e.g. `mdseo-ignore: [chk_fm slug]`.\n",
+    "        Filtering happens in `_max_len_err` and `_min_len_err`. \n",
+    "    '''\n",
     "    if not hasattr(_en, key): raise Exception(f'No rule exists for {key}')\n",
     "    if minlen:\n",
     "        return _checker(partial(_min_len_err, key=key, n=minlen), \n",
