--- a/core.ipynb
+++ b/core.ipynb
@@ -285,23 +285,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7be8b234",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "key = \"slug\"\n",
-    "maxlen = 60\n",
-    "srcdir = \"/Users/eddie/Dev/outerbounds-docs/docs\"\n",
-    "\n",
-    "_checker(\n",
-    "    partial(_max_len_err, key=key, n=maxlen), \n",
-    "    f\"have the field `{key}` in their front matter that is greater than {maxlen} characters\", srcdir\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "2510d524-290e-44e9-b02e-3b6577f7195e",
    "metadata": {},
    "outputs": [],
@@ -315,6 +298,17 @@
     "assert _max_len_err(_test_fm, 'slug', 5) # 19 > 5\n",
     "\n",
     "\n",
+    "assert not _min_len_err(_test_fm, 'slug', 5)\n",
+    "assert not _max_len_err(_test_fm, 'slug', 39)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64c380fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "assert not _min_len_err(_test_fm, 'slug', 5)\n",
     "assert not _max_len_err(_test_fm, 'slug', 39)\n",
     "\n",
@@ -332,6 +326,29 @@
     "assert not _max_len_err(_test_ignore_long_slug_fm, 'slug', n)\n",
     "_test_ignore_long_slug_fm['mdseo-ignore'] = []\n",
     "assert _max_len_err(_test_ignore_long_slug_fm, 'slug', n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baf9495d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_test_ignore_short_desc_fm = get_meta('test_files/front_matter_ignore_short_desc.md')\n",
+    "_test_ignore_long_desc_fm = get_meta('test_files/front_matter_ignore_long_desc.md')\n",
+    "\n",
+    "n = 10\n",
+    "assert len(_test_ignore_short_desc_fm['description']) < n\n",
+    "assert not _min_len_err(_test_ignore_short_desc_fm, 'description', n)\n",
+    "_test_ignore_short_desc_fm['mdseo-ignore'] = []\n",
+    "assert _min_len_err(_test_ignore_short_desc_fm, 'description', n)\n",
+    "\n",
+    "n = 60\n",
+    "assert len(_test_ignore_long_desc_fm['description']) > n\n",
+    "assert not _max_len_err(_test_ignore_long_desc_fm, 'description', n)\n",
+    "_test_ignore_long_desc_fm['mdseo-ignore'] = []\n",
+    "assert _max_len_err(_test_ignore_long_desc_fm, 'description', n)"
    ]
   },
   {
