--- a/index.ipynb
+++ b/index.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d0554fb-5011-4f39-b92e-815c50a626c7",
+   "id": "8ed76a70-9e07-4663-909d-93d5318d5542",
    "metadata": {},
    "source": [
     "## Ignoring Checks\n",
@@ -327,13 +327,92 @@
     "---\n",
     "```\n",
     "\n",
+    "There is a generic function `mdseo_chk_fm` that checks the presence, min length and max length of a front matter field.  You can ignore any checks conducted by this function by passing in the appropriate fields to `mdseo-ignore`.  These are the fields that you can ignore:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d95db76a-e78c-4d0c-b32f-36d32265dc8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "`description`, `slug`, `image`, `authors`"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#hide_input\n",
+    "from mdseo.core import _en\n",
+    "from IPython.display import Markdown\n",
+    "vals = ', '.join(['`'+e.value+'`' for e in _en])\n",
+    "Markdown(f'{vals}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6ca56b7-2abc-4207-ac51-38e958537f6e",
+   "metadata": {},
+   "source": [
+    "For example, if you wanted to ingore all of these fields you could put the following in your front matter:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9dc01219-24b5-424e-829e-1e576bc93a9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```\n",
+       "---\n",
+       "mdseo-ignore: [description,slug,image,authors]\n",
+       "---\n",
+       "```\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#hide_input\n",
+    "vals = ','.join([e.value for e in _en])\n",
+    "Markdown(f\"\"\"```\n",
+    "---\n",
+    "mdseo-ignore: [{vals}]\n",
+    "---\n",
+    "```\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3688ed6c-a36d-45da-846e-b7d9d3a2ee3f",
+   "metadata": {},
+   "source": [
     "### With The Keyword `mdseo-ignore-all`\n",
     "\n",
     "Some markdown files may not have front matter, or it may not be appropriate to add front matter to a file.  In this case you can place the text `mdseo-ignore-all` anywhere in the file and all checks will be ignored, the most common way to add this keyword is with a markdown comment:\n",
     "\n",
     "```\n",
     "<-- mdseo-ignore-all -->\n",
-    "```\n"
+    "```"
    ]
   },
   {
@@ -350,6 +429,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
