--- a/core.ipynb
+++ b/core.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "a0ef3123-6135-4713-aac0-e99411240d6d",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "b8a1d5d1-7151-4f47-a41f-2cee6841727b",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "56e6f4e8-86ba-41b6-9131-8d4f65687eaf",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "a63b376a-1e06-4d01-9df0-58535f5e1de3",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "93417fdb-6e57-42df-99e6-ca6dbebedc94",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "d132678e-4db8-4eb5-9f88-e05c74528e2c",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "ede4480d-2596-495f-b4fb-d76c90254ea6",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "c5d39173-8219-4d13-b3ac-91f7fa3317cf",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "31b1ff5f-37a7-45f5-9ce7-22ea3853d9f4",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "548fcb15-a586-45ea-95b5-82d7db6774b2",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "ee9f0403-4548-4e4f-b740-c0193ffbcbf3",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "59f2b7d8-ff5b-4afd-9521-78a5e0ec4f0f",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "5739af98-e915-4fe1-846f-2b6dfd28f34b",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "e4804019-535d-4076-ac15-5129a34d78ec",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "41096e3d-0988-456c-8897-e3de5443818f",
    "metadata": {},
    "outputs": [
@@ -234,7 +234,7 @@
        " 'mdseo-ignore': ['title', 'body', 'desc']}"
       ]
      },
-     "execution_count": null,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "c522922d-f735-4709-a3ec-ac724eec23c4",
    "metadata": {},
    "outputs": [],
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "3fa3ad7b-5b33-4006-a986-8b371f031a1e",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "2510d524-290e-44e9-b02e-3b6577f7195e",
    "metadata": {},
    "outputs": [],
@@ -297,33 +297,16 @@
     "\n",
     "\n",
     "assert not _min_len_err(_test_fm, 'slug', 5)\n",
-    "assert not _max_len_err(_test_fm, 'slug', 39)"
+    "assert not _max_len_err(_test_fm, 'slug', 39)\n",
+    "\n",
+    "_test_fm4 = get_meta('test_files/front_matter4.md')\n",
+    "assert not _max_len_err(_test_fm4, 'slug', 5) # because slug is in seo-ignore\n",
+    "assert not _min_len_err(_test_fm4, 'slug', 500) # because slug is in seo-ignore"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3c166b8a-e8c3-4aba-b726-b076affb2afd",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "hasattr(_en, 'authors')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "bf130cc9-3fb3-4010-b8ac-1d317bb47d64",
    "metadata": {},
    "outputs": [],
@@ -335,7 +318,7 @@
     "           minlen:int=None, #the minimum character length allowed for the field\n",
     "           maxlen:int=None  #the maximum character length allowed for the field\n",
     "          ):\n",
-    "    \"Check front matter for various rules.\"\n",
+    "    \"Check front matter for various rules. Ignore by setting front matter `mdseo-ignore` with the appropriate fields, for example `mdseo-ignore: ['slug']\"\n",
     "    if not hasattr(_en, key): raise Exception(f'No rule exists for {key}')\n",
     "    if minlen:\n",
     "        return _checker(partial(_min_len_err, key=key, n=minlen), \n",
@@ -349,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "339938b2-4b2f-4818-be22-c30204ce3424",
    "metadata": {},
    "outputs": [],
@@ -360,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "cb21f54d-a0a6-40fc-9025-d9d6d32fd11a",
    "metadata": {},
    "outputs": [],
@@ -380,13 +363,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "19dc2aea-a1ad-4727-95fd-b616a00214aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "test_fail(chk_len)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c74b64a5-3689-4197-b384-13198c50b24e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -394,6 +385,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
