--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,8 @@
       "usage: mdseo_chk_fm [-h] [--srcdir SRCDIR] [--minlen MINLEN] [--maxlen MAXLEN]\n",
       "                    {description,slug,image,authors}\n",
       "\n",
-      "Check front matter for various rules.\n",
+      "Check front matter for various rules. Ignore by setting front matter `mdseo-\n",
+      "ignore` with the appropriate fields, for example `mdseo-ignore: ['slug']\n",
       "\n",
       "positional arguments:\n",
       "  {description,slug,image,authors}  front matter field to check\n",
@@ -286,6 +287,7 @@
       "\t./test_files/false_fm2.md\n",
       "\t./test_files/front_matter_test_docs.md\n",
       "\t./test_files/false_fm.md\n",
+      "\t./test_files/front_matter4.md\n",
       "\t./test_files/test_docs.md\n"
      ]
     }
@@ -332,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d95db76a-e78c-4d0c-b32f-36d32265dc8b",
    "metadata": {},
    "outputs": [
@@ -345,7 +347,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "9dc01219-24b5-424e-829e-1e576bc93a9c",
    "metadata": {},
    "outputs": [
@@ -385,7 +387,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,18 +431,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.7"
   }
  },
  "nbformat": 4,
